[package]
name = "coordinate-altitude"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.203", default-features = false, features = [
  "derive",
  "std",
] }
serde_json = { version = "1.0.120", default-features = false, features = [
  "std",
] }
ureq = { version = "2.9.7", default-features = false, features = ["tls"] }
